# adventofcode22

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: FileReader.h  Views.h
src/common/src/: FileReader.cpp
src/day01/: main.cpp
src/day02/: main.cpp
src/day03/: main.cpp
src/day04/: main.cpp
src/day05/: main.cpp
src/day06/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
